CI: use Rack 3.1 (stable) for most jobs
We got that Rack release we needed (3.1.7).

Close https://github.com/sinatra/sinatra/issues/2014

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         rack:
-          - "~>3.0.0"
+          - stable
         ruby:
           - "2.7"
           - "3.0"
@@ -29,10 +29,10 @@ jobs:
           - "truffleruby"
         include:
           # Rack
-          - { ruby: 3.2, rack: "~>3.1.0" }
+          - { ruby: 3.2, rack: "~>3.0.0" }
           - { ruby: 3.2, rack: head }
           # Never fail our build due to problems with Ruby head
-          - { ruby: ruby-head, rack: "~>3.0.0", allow-failure: true }
+          - { ruby: ruby-head, rack: stable, allow-failure: true }
     env:
       rack: ${{ matrix.rack }}
     steps:
@@ -73,7 +73,7 @@ jobs:
         puma:
           - stable
         rack:
-          - "~>3.0.0"
+          - stable
         rack_session:
           - stable
         tilt:
@@ -86,23 +86,22 @@ jobs:
           - "3.3"
         include:
           # Rack
-          # allow Rack 3.1 to fail as we need a new release: https://github.com/sinatra/sinatra/issues/2014
-          - { ruby: 3.2, rack: "~>3.1.0", puma: stable,   tilt: stable, rack_session: stable, allow-failure: true }
-          - { ruby: 3.2, rack: head,      puma: stable,   tilt: stable, rack_session: stable }
+          - { ruby: 3.2, rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable }
+          - { ruby: 3.2, rack: head, puma: stable, tilt: stable, rack_session: stable }
           # Rack::Session
-          - { ruby: 3.2, rack: "~>3.0.0", puma: stable,   tilt: stable, rack_session: head }
+          - { ruby: 3.2, rack: stable, puma: stable, tilt: stable, rack_session: head }
           # Puma
-          - { ruby: 3.2, rack: "~>3.0.0", puma: head,     tilt: stable, rack_session: stable }
+          - { ruby: 3.2, rack: stable, puma: head, tilt: stable, rack_session: stable }
           # Tilt
-          - { ruby: 3.2, rack: "~>3.0.0", puma: stable,   tilt: head,   rack_session: stable }
+          - { ruby: 3.2, rack: stable, puma: stable,tilt: head,   rack_session: stable }
           # JRuby, tests are flaky: https://github.com/sinatra/sinatra/issues/2027
-          - { ruby: jruby,            rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: jruby,            rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
           # Never fail our build due to problems with head rubies
-          - { ruby: ruby-head,        rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
-          - { ruby: jruby-head,       rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
-          - { ruby: truffleruby-head, rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: ruby-head,        rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: jruby-head,       rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: truffleruby-head, rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
           # truffleruby 24 fails, see https://github.com/sinatra/sinatra/issues/2007
-          - { ruby: truffleruby,      rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
+          - { ruby: truffleruby,      rack: stable, puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
 
     env:
       rack: ${{ matrix.rack }}
