Fix compatibility with `--enable-frozen-string-literal` (#2033)
Ever since Ruby 2.3 it has been possible to enable frozen string
literals globally via `RUBYOPT`, and it is scheduled to be the default
in Ruby 4.

Co-authored-by: Jean Boussier <jean.boussier@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,6 +108,7 @@ jobs:
       rack_session: ${{ matrix.rack_session }}
       puma: ${{ matrix.puma }}
       tilt: ${{ matrix.tilt }}
+      RUBYOPT: "--enable-frozen-string-literal --debug-frozen-string-literal"
 
     steps:
     - name: Install dependencies
