--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,6 +102,8 @@ jobs:
       rack: ${{ matrix.rack }}
       puma: ${{ matrix.puma }}
       tilt: ${{ matrix.tilt }}
+      RUBYOPT: "--enable-frozen-string-literal --debug-frozen-string-literal"
+
     steps:
     - name: Install dependencies
       run: |
