--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,8 +87,9 @@ jobs:
           - "3.2"
           - "3.3"
           - "jruby"
+        rubyopt:
+          - "--enable-frozen-string-literal --debug-frozen-string-literal"
         include:
-<<<<<<< HEAD
           # Puma
           - { ruby: 3.1, rack: '~> 2', puma: '~> 5',   tilt: stable }
           - { ruby: 3.2, rack: '~> 2', puma: head,     tilt: stable, allow-failure: true }
@@ -98,39 +99,22 @@ jobs:
           - { ruby: jruby-9.3, rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
           # Due to https://github.com/jruby/jruby/issues/7647
           - { ruby: jruby-9.4, rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
+          # JRuby, tests are flaky: https://github.com/sinatra/sinatra/issues/2027
+          - { ruby: jruby, rubyopt: "", rack: stable, puma: stable, tilt: stable, zeitwerk: stable, allow-failure: true }
           # Never fail our build due to problems with head
           - { ruby: ruby-head,        rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
           - { ruby: jruby-head,       rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
+          - { ruby: jruby-head,       rubyopt: "", rack: stable, puma: stable, tilt: stable, zeitwerk: stable, allow-failure: true }
           - { ruby: truffleruby-head, rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
           - { ruby: truffleruby,      rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
-=======
-          # Rack
-          - { ruby: 3.2, rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable }
-          - { ruby: 3.2, rack: head, puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable }
-          # Rack::Session
-          - { ruby: 3.2, rack: stable, puma: stable, tilt: stable, rack_session: head, zeitwerk: stable }
-          # Puma
-          - { ruby: 3.2, rack: stable, puma: head, tilt: stable, rack_session: stable, zeitwerk: stable }
-          # Tilt
-          - { ruby: 3.2, rack: stable, puma: stable, tilt: head, rack_session: stable, zeitwerk: stable }
-          # Test Zeitwerk < 2.7.0 separately
-          - { ruby: 3.2, rack: stable, puma: stable, tilt: head, rack_session: stable, zeitwerk: '<2.7.0' }
-          # JRuby, tests are flaky: https://github.com/sinatra/sinatra/issues/2027
-          - { ruby: jruby,            rack: stable, puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable, allow-failure: true }
-          # Never fail our build due to problems with head rubies
-          - { ruby: ruby-head,        rack: stable, puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable, allow-failure: true }
-          - { ruby: jruby-head,       rack: stable, puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable, allow-failure: true }
-          - { ruby: truffleruby-head, rack: stable, puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable, allow-failure: true }
-          # truffleruby 24 fails, see https://github.com/sinatra/sinatra/issues/2007
-          - { ruby: truffleruby,      rack: stable, puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable, allow-failure: true }
 
->>>>>>> 1a34d432 (Support Zeitwerk 2.7.0+ (#2050))
     env:
       rack: ${{ matrix.rack }}
       puma: ${{ matrix.puma }}
       tilt: ${{ matrix.tilt }}
       zeitwerk: ${{ matrix.zeitwerk }}
-      RUBYOPT: "--enable-frozen-string-literal --debug-frozen-string-literal"
+      RUBYOPT: "${{ matrix.rubyopt }}"
+      # need to unset RUBYOPT for JRuby: https://github.com/jruby/ruby-maven/issues/12
 
     steps:
     - name: Install dependencies
