--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
         include:
           # Rack
           - { ruby: 3.4, rack: "~>3.0.0" }
+          - { ruby: 3.4, rack: "~>3.1.0" }
           - { ruby: 3.4, rack: head }
           # Never fail our build due to problems with Ruby head
           - { ruby: ruby-head, rack: stable, allow-failure: true }
@@ -93,6 +94,7 @@ jobs:
         include:
           # Rack
           - { ruby: 3.4, rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable }
+          - { ruby: 3.4, rack: "~>3.1.0", puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable }
           - { ruby: 3.4, rack: head, puma: stable, tilt: stable, rack_session: stable, zeitwerk: stable }
           # Rack::Session
           - { ruby: 3.4, rack: stable, puma: stable, tilt: stable, rack_session: head, zeitwerk: stable }
