--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -151,6 +151,15 @@ jobs:
         # and https://github.com/sinatra/sinatra/issues/2051 (3.1)
         rubygems: ${{ matrix.ruby == '3.0' && 'latest' || matrix.ruby == '3.1' && 'latest' || 'default' }}
 
+    # workaround for https://github.com/ruby/setup-ruby/issues/845
+    - name: Ensure Gemfile.lock is created with Bundler 2 for Ruby 4
+      if: matrix.ruby == '4.0' || matrix.ruby == 'ruby-head'
+      run: |
+        rm Gemfile.lock
+        bundle install
+      env:
+        BUNDLER_VERSION: ${{ matrix.bundler }}
+
     - name: Run sinatra tests
       continue-on-error: ${{ matrix.allow-failure || false }}
       id: tests
